Tweak java executable setting

--- a/build-tools-internal/src/main/groovy/elasticsearch.runtime-jdk-provision.gradle
+++ b/build-tools-internal/src/main/groovy/elasticsearch.runtime-jdk-provision.gradle
@@ -32,7 +32,7 @@ configure(allprojects) {
     }
     project.tasks.withType(Test).configureEach { Test test ->
         if (BuildParams.getIsRuntimeJavaHomeSet()) {
-            test.executable = "${BuildParams.runtimeJavaHome}/bin/java" +
+            test.executable = "${BuildParams.runtimeJavaHome.canonicalPath}/bin/java" +
                     (OS.current() == OS.WINDOWS ? '.exe' : '')
 
             test.doFirst {
