--- a/x-pack/plugin/rollup/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/rollup/10_basic.yml
+++ b/x-pack/plugin/rollup/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/rollup/10_basic.yml
@@ -751,3 +751,110 @@ setup:
   - match: { rollup-test-timestamp.mappings.properties.@timestamp.format: "uuuu-MM-dd'T'HH:mm:ss.SSSSSSSSSX" }
   - match: { rollup-test-timestamp.mappings.properties.@timestamp.meta.fixed_interval: 1h }
   - match: { rollup-test-timestamp.mappings.properties.@timestamp.meta.time_zone: UTC }
+
+---
+"Downsample using coarse grained timestamp":
+  - skip:
+      version: " - 8.6.99"
+      reason: "Downsample GA version 8.7.0"
+
+  - do:
+      indices.create:
+        index: test-timestamp-daily
+        body:
+          settings:
+            number_of_shards: 1
+            number_of_replicas: 0
+            index:
+              mode: time_series
+              routing_path: [ metricset, k8s.pod.uid ]
+              time_series:
+                start_time: 2023-02-23T00:00:00Z
+                end_time: 2023-02-27T00:00:00Z
+          mappings:
+            properties:
+              "@timestamp":
+                type: date
+                format: "uuuu-MM-dd"
+              metricset:
+                type: keyword
+                time_series_dimension: true
+              k8s:
+                properties:
+                  pod:
+                    properties:
+                      uid:
+                        type: keyword
+                        time_series_dimension: true
+                      name:
+                        type: keyword
+                      value:
+                        type: integer
+                        time_series_metric: gauge
+  - do:
+      bulk:
+        refresh: true
+        index: test-timestamp-daily
+        body:
+          - '{"index": {}}'
+          - '{"@timestamp": "2023-02-23", "metricset": "pod", "k8s": {"pod": {"name": "cat", "uid":"947e4ced-1786-4e53-9e0c-5c447e959507", "value": 10 }}}'
+          - '{"index": {}}'
+          - '{"@timestamp": "2023-02-24", "metricset": "pod", "k8s": {"pod": {"name": "cat", "uid":"947e4ced-1786-4e53-9e0c-5c447e959507", "value": 12 }}}'
+          - '{"index": {}}'
+          - '{"@timestamp": "2023-02-25", "metricset": "pod", "k8s": {"pod": {"name": "cat", "uid":"947e4ced-1786-4e53-9e0c-5c447e959507", "value": 8 }}}'
+          - '{"index": {}}'
+          - '{"@timestamp": "2023-02-26", "metricset": "pod", "k8s": {"pod": {"name": "cat", "uid":"947e4ced-1786-4e53-9e0c-5c447e959507", "value": 9 }}}'
+
+  - do:
+      indices.put_settings:
+        index: test-timestamp-daily
+        body:
+          index.blocks.write: true
+
+  - is_true: acknowledged
+
+  - do:
+      indices.downsample:
+        index: test-timestamp-daily
+        target_index: rollup-test-timestamp-hourly
+        body: >
+          {
+            "fixed_interval": "1h"
+          }
+  - is_true: acknowledged
+
+  - do:
+      search:
+        index: rollup-test-timestamp-hourly
+        body:
+          sort: [ "_tsid", "@timestamp" ]
+
+  - length: { hits.hits: 4 }
+  - match: { hits.hits.0._source._doc_count: 1 }
+  - match: { hits.hits.0._source.k8s.pod.uid: 947e4ced-1786-4e53-9e0c-5c447e959507 }
+  - match: { hits.hits.0._source.metricset: pod }
+  - match: { hits.hits.0._source.@timestamp: 2023-02-23 }
+  - match: { hits.hits.0._source.k8s.pod.value.min: 10.0 }
+  - match: { hits.hits.0._source.k8s.pod.value.max: 10.0 }
+  - match: { hits.hits.0._source.k8s.pod.value.sum: 10.0 }
+  - match: { hits.hits.1._source._doc_count: 1 }
+  - match: { hits.hits.1._source.k8s.pod.uid: 947e4ced-1786-4e53-9e0c-5c447e959507 }
+  - match: { hits.hits.1._source.metricset: pod }
+  - match: { hits.hits.1._source.@timestamp: 2023-02-24 }
+  - match: { hits.hits.1._source.k8s.pod.value.min: 12.0 }
+  - match: { hits.hits.1._source.k8s.pod.value.max: 12.0 }
+  - match: { hits.hits.1._source.k8s.pod.value.sum: 12.0 }
+  - match: { hits.hits.2._source._doc_count: 1 }
+  - match: { hits.hits.2._source.k8s.pod.uid: 947e4ced-1786-4e53-9e0c-5c447e959507 }
+  - match: { hits.hits.2._source.metricset: pod }
+  - match: { hits.hits.2._source.@timestamp: 2023-02-25 }
+  - match: { hits.hits.2._source.k8s.pod.value.min: 8.0 }
+  - match: { hits.hits.2._source.k8s.pod.value.max: 8.0 }
+  - match: { hits.hits.2._source.k8s.pod.value.sum: 8.0 }
+  - match: { hits.hits.3._source._doc_count: 1 }
+  - match: { hits.hits.3._source.k8s.pod.uid: 947e4ced-1786-4e53-9e0c-5c447e959507 }
+  - match: { hits.hits.3._source.metricset: pod }
+  - match: { hits.hits.3._source.@timestamp: 2023-02-26 }
+  - match: { hits.hits.3._source.k8s.pod.value.min: 9.0 }
+  - match: { hits.hits.3._source.k8s.pod.value.max: 9.0 }
+  - match: { hits.hits.3._source.k8s.pod.value.sum: 9.0 }
