--- a/x-pack/plugin/snapshot-repo-test-kit/qa/s3/build.gradle
+++ b/x-pack/plugin/snapshot-repo-test-kit/qa/s3/build.gradle
@@ -46,7 +46,7 @@ if (useFixture) {
 
 tasks.named("javaRestTest").configure {
   systemProperty 'test.s3.bucket', s3Bucket
-  nonInputProperties.systemProperty 'test.s3.base_path', s3BasePath ? s3BasePath : 'base_path'
+  nonInputProperties.systemProperty 'test.s3.base_path', s3BasePath ? s3BasePath + "_repo_test_kit_tests" + BuildParams.testSeed : 'base_path'
 }
 
 testClusters.matching { it.name == "javaRestTest" }.configureEach {
@@ -64,12 +64,9 @@ testClusters.matching { it.name == "javaRestTest" }.configureEach {
     }
     setting 's3.client.repo_test_kit.protocol', 'http'
     setting 's3.client.repo_test_kit.endpoint', { "${-> fixtureAddress('s3-fixture-repository-test-kit')}" }, IGNORE_VALUE
-
-  } else {
-    setting 's3.client.repo_test_kit.protocol', 'http'
-    setting 's3.client.repo_test_kit.endpoint', '127.0.0.1:9500'
     setting 'logger.org.apache.http.wire', 'DEBUG'
 
+  } else {
     println "Using an external service to test " + project.name
   }
   setting 'xpack.security.enabled', 'false'
