--- a/test/fixtures/s3-fixture/build.gradle
+++ b/test/fixtures/s3-fixture/build.gradle
@@ -16,7 +16,7 @@ dependencies {
   testImplementation project(':test:framework')
 }
 
-tasks.named("assemble").configure {
+tasks.named("preProcessFixture").configure {
   dependsOn "jar", configurations.runtimeClasspath
   doLast {
     file("${testFixturesDir}/shared").mkdirs()
