Add GET Engine API call (#94090)

--- a/x-pack/plugin/ent-search/qa/rest/roles.yml
+++ b/x-pack/plugin/ent-search/qa/rest/roles.yml
@@ -2,6 +2,5 @@ entsearch:
   cluster:
     - manage
   indices:
-    - names: '*'
-      privileges:
-        - manage
+    - names: [ "*" ]
+      privileges: [ "manage" ]
