Get tests working

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
@@ -25,6 +25,6 @@ setup:
 "Delete Engine - Index does not exist":
   - do:
       catch: "missing"
-      engine.put:
+      engine.delete:
         engine_id: test-nonexistent-engine
 
