needs features directive

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/tsdb/20_mapping.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/tsdb/20_mapping.yml
@@ -271,6 +271,7 @@ runtime field matching routing path:
 ---
 "dynamic: false matches routing_path":
   - skip:
+      features: contains
       version: " - 8.1.99"
       reason: tsdb indexing changed in 8.2.0
 
