Add get call to delete yaml to verify it's gone

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
@@ -21,6 +21,11 @@ setup:
 
   - match: { acknowledged: true }
 
+  - do:
+      catch: "missing"
+      engine.get:
+        engine_id: test-engine-to-delete
+
 ---
 "Delete Engine - Index does not exist":
   - do:
