--- a/x-pack/plugin/security/qa/multi-cluster/build.gradle
+++ b/x-pack/plugin/security/qa/multi-cluster/build.gradle
@@ -5,24 +5,27 @@
  * 2.0.
  */
 
-import org.elasticsearch.gradle.Version
 import org.elasticsearch.gradle.internal.info.BuildParams
+import org.elasticsearch.gradle.testclusters.StandaloneRestIntegTestTask
 
 apply plugin: 'elasticsearch.internal-java-rest-test'
 apply plugin: 'elasticsearch.rest-resources'
+apply plugin: 'elasticsearch.bwc-test'
 
 dependencies {
   clusterModules(project(":modules:analysis-common"))
 }
 
-tasks.named('javaRestTest') { it ->
-  var bwcVersionCandidates = BuildParams.bwcVersions.getWireCompatible().stream()
-    .filter(v -> v.before('8.8.0') && v.onOrAfter('7.17.0')).toList();
-  if (bwcVersionCandidates.size() > 0) {
-    int bwcVersionIndex = BuildParams.random.nextInt(0, bwcVersionCandidates.size())
-    Version bwcVersion = bwcVersionCandidates.get(bwcVersionIndex)
-    println "Randomly selected BWC Version {$bwcVersion}"
+tasks.named("javaRestTest") {
+  enabled = true
+  // This is tested explicitly in bwc test tasks.
+  exclude '**/RemoteClusterSecurityBwcRestIT.class'
+}
+
+BuildParams.bwcVersions.withWireCompatible(v -> v.onOrAfter('7.17.0') && v.before('8.8.0')) { bwcVersion, baseName ->
+  tasks.register(bwcTaskName(bwcVersion), StandaloneRestIntegTestTask) {
     usesBwcDistribution(bwcVersion)
     systemProperty("tests.old_cluster_version", bwcVersion)
+    include '**/RemoteClusterSecurityBwcRestIT.class'
   }
 }
