--- a/build-tools-internal/src/main/groovy/elasticsearch.bwc-test.gradle
+++ b/build-tools-internal/src/main/groovy/elasticsearch.bwc-test.gradle
@@ -33,7 +33,7 @@ tasks.register("bwcTest") {
 
 plugins.withType(ElasticsearchTestBasePlugin) {
   tasks.withType(Test).configureEach {
-    onlyIf { project.bwc_tests_enabled && name.contains('#bwcTest') }
+    onlyIf { project.bwc_tests_enabled || name.contains('#bwcTest') == false }
     nonInputProperties.systemProperty 'tests.bwc', 'true'
   }
 }
