--- a/docs/changelog/76511.yaml
+++ b/docs/changelog/76511.yaml
@@ -1,5 +1,5 @@
 pr: 76511
-summary: Add `data_stream_router` processor
+summary: Add `reroute` processor
 area: Ingest Node
 type: enhancement
 issues: []
