--- a/x-pack/plugin/security/qa/multi-cluster/build.gradle
+++ b/x-pack/plugin/security/qa/multi-cluster/build.gradle
@@ -22,7 +22,7 @@ tasks.named("javaRestTest") {
   exclude '**/RemoteClusterSecurityBwcRestIT.class'
 }
 
-BuildParams.bwcVersions.withWireCompatible(v -> v.onOrAfter('7.17.0') && v.before('8.8.0')) { bwcVersion, baseName ->
+BuildParams.bwcVersions.withWireCompatible(v -> v.before('8.8.0')) { bwcVersion, baseName ->
   tasks.register(bwcTaskName(bwcVersion), StandaloneRestIntegTestTask) {
     usesBwcDistribution(bwcVersion)
     systemProperty("tests.old_cluster_version", bwcVersion)
