--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -62,6 +62,12 @@ teardown:
 
   - match: { result: "created" }
 
+  - do:
+      indices.exists_alias:
+        body:
+          name: engine-test-engine
+
+  - match: { "foo" }
 ---
 "Update Engine":
   - do:
