--- a/build-tools-internal/src/main/groovy/elasticsearch.bwc-test.gradle
+++ b/build-tools-internal/src/main/groovy/elasticsearch.bwc-test.gradle
@@ -32,8 +32,8 @@ tasks.register("bwcTest") {
 }
 
 plugins.withType(ElasticsearchTestBasePlugin) {
-  tasks.withType(Test).configureEach {
-    onlyIf { project.bwc_tests_enabled || name.contains('#bwcTest') == false }
+  tasks.withType(Test).matching { it.name ==~ /v[0-9\.]+#.*/ }.configureEach {
+    onlyIf { project.bwc_tests_enabled }
     nonInputProperties.systemProperty 'tests.bwc', 'true'
   }
 }
