Change definition of the qa role

--- a/x-pack/plugin/ent-search/qa/rest/roles.yml
+++ b/x-pack/plugin/ent-search/qa/rest/roles.yml
@@ -1,6 +1,7 @@
 entsearch:
   cluster:
-    - manage
+    - manage_engine
+    - monitor
   indices:
     - names: [ "*" ]
       privileges: [ "manage" ]
