--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_list.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_list.yml
@@ -43,7 +43,84 @@ setup:
   - do:
       engine.list: { }
 
-  - match: { _meta.total: 3 }
-  - match: { _meta.from: 0 }
-  - match: { _meta.size: 100 }
+  - match: { count: 3 }
 
+  # Alphabetical order for results
+  - match: { results.0.name: "another-test-engine" }
+  - match: { results.0.indices: [ "test-index1", "test-index2" ] }
+  - match: { results.0..analytics_collection_name: "test-another-analytics" }
+  - gte: { results.0.updated_at_millis: 0 }
+
+  - match: { results.1.name: "test-engine-1" }
+  - match: { results.1.indices: ["test-index1"] }
+  - match: { results.1..analytics_collection_name: "test-analytics1" }
+  - gte: { results.1.updated_at_millis: 0 }
+
+  - match: { results.2.name: "test-engine-2" }
+  - match: { results.2.indices: ["test-index2"] }
+  - match: { results.2..analytics_collection_name: "test-analytics2" }
+  - gte: { results.2.updated_at_millis: 0 }
+
+---
+"Pagination - From":
+  - do:
+      engine.list:
+        from: 1
+
+  - match: { count: 3 }
+
+  - match: { results.0.name: "test-engine-1" }
+  - match: { results.0.indices: ["test-index1"] }
+  - match: { results.0..analytics_collection_name: "test-analytics1" }
+  - gte: { results.0.updated_at_millis: 0 }
+
+  - match: { results.1.name: "test-engine-2" }
+  - match: { results.1.indices: ["test-index2"] }
+  - match: { results.1..analytics_collection_name: "test-analytics2" }
+  - gte: { results.1.updated_at_millis: 0 }
+
+---
+"Pagination - Size":
+  - do:
+      engine.list:
+        size: 2
+
+  - match: { count: 3 }
+
+  - match: { results.0.name: "another-test-engine" }
+  - match: { results.0.indices: [ "test-index1", "test-index2" ] }
+  - match: { results.0..analytics_collection_name: "test-another-analytics" }
+  - gte: { results.0.updated_at_millis: 0 }
+
+  - match: { results.1.name: "test-engine-1" }
+  - match: { results.1.indices: ["test-index1"] }
+  - match: { results.1..analytics_collection_name: "test-analytics1" }
+  - gte: { results.1.updated_at_millis: 0 }
+
+
+---
+"Query":
+  - do:
+      engine.list:
+        q: "test-engine-*"
+
+  - match: { count: 2 }
+
+  - match: { results.0.name: "test-engine-1" }
+  - match: { results.0.indices: ["test-index1"] }
+  - match: { results.0..analytics_collection_name: "test-analytics1" }
+  - gte: { results.0.updated_at_millis: 0 }
+
+  - match: { results.1.name: "test-engine-2" }
+  - match: { results.1.indices: ["test-index2"] }
+  - match: { results.1..analytics_collection_name: "test-analytics2" }
+  - gte: { results.1.updated_at_millis: 0 }
+
+---
+"Empty query results":
+  - do:
+      engine.list:
+        q: "non-existing-query"
+
+  - match: { count: 0 }
+  - match: { results: [] }
