--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/30_engine_get.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/30_engine_get.yml
@@ -24,6 +24,12 @@ setup:
           indices: [ "test-index1", "test-index2"]
           analytics_collection_name: "test-analytics"
 
+---
+teardown:
+  - do:
+      engine.delete:
+        engine_id: my-test-engine
+        ignore: 404
 
 ---
 "Get Engine":
