Fix rest yaml tests

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -64,8 +64,9 @@ teardown:
 
   - do:
       indices.exists_alias:
-        body:
-          name: engine-test-engine
+        name: engine-test-engine
+
+  - is_true: ''
 
   - match: { "foo" }
 ---
