--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
@@ -34,10 +34,10 @@ teardown:
         engine_id: test-engine-to-delete
 
   - do:
-      catch: "missing"
       indices.exists_alias:
-        body:
-          name: engine-test-engine-to-delete
+        name: engine-test-engine-to-delete
+
+  - is_false: ''
 
 ---
 "Delete Engine - Index does not exist":
