--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/50_engine_list.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/50_engine_list.yml
@@ -64,19 +64,22 @@ teardown:
 
   # Alphabetical order for results
   - match: { results.0.name: "another-test-engine" }
+  - match: { results.0.engine_alias: "engine-another-test-engine" }
   - match: { results.0.indices: [ "test-index1", "test-index2" ] }
-  - match: { results.0..analytics_collection_name: "test-another-analytics" }
-  - gte: { results.0.updated_at_millis: 0 }
+  - match: { results.0.analytics_collection_name: "test-another-analytics" }
+  - match: { results.0.updated_at_millis: null }
 
   - match: { results.1.name: "test-engine-1" }
-  - match: { results.1.indices: ["test-index1"] }
-  - match: { results.1..analytics_collection_name: "test-analytics1" }
-  - gte: { results.1.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "engine-test-engine-1" }
+  - match: { results.1.indices: [ "test-index1" ] }
+  - match: { results.1.analytics_collection_name: "test-analytics1" }
+  - match: { results.1.updated_at_millis: null }
 
   - match: { results.2.name: "test-engine-2" }
-  - match: { results.2.indices: ["test-index2"] }
-  - match: { results.2..analytics_collection_name: "test-analytics2" }
-  - gte: { results.2.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "engine-test-engine-2" }
+  - match: { results.2.indices: [ "test-index2" ] }
+  - match: { results.2.analytics_collection_name: "test-analytics2" }
+  - match: { results.2.updated_at_millis: null }
 
 ---
 "Pagination - From":
@@ -87,14 +90,16 @@ teardown:
   - match: { count: 3 }
 
   - match: { results.0.name: "test-engine-1" }
-  - match: { results.0.indices: ["test-index1"] }
-  - match: { results.0..analytics_collection_name: "test-analytics1" }
-  - gte: { results.0.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "engine-test-engine-1" }
+  - match: { results.0.indices: [ "test-index1" ] }
+  - match: { results.0.analytics_collection_name: "test-analytics1" }
+  - match: { results.0.updated_at_millis: null }
 
   - match: { results.1.name: "test-engine-2" }
-  - match: { results.1.indices: ["test-index2"] }
-  - match: { results.1..analytics_collection_name: "test-analytics2" }
-  - gte: { results.1.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "engine-test-engine-2" }
+  - match: { results.1.indices: [ "test-index2" ] }
+  - match: { results.1.analytics_collection_name: "test-analytics2" }
+  - match: { results.1.updated_at_millis: null }
 
 ---
 "Pagination - Size":
@@ -105,14 +110,16 @@ teardown:
   - match: { count: 3 }
 
   - match: { results.0.name: "another-test-engine" }
+  - match: { results.0.engine_alias: "engine-another-test-engine" }
   - match: { results.0.indices: [ "test-index1", "test-index2" ] }
-  - match: { results.0..analytics_collection_name: "test-another-analytics" }
-  - gte: { results.0.updated_at_millis: 0 }
+  - match: { results.0.analytics_collection_name: "test-another-analytics" }
+  - match: { results.0.updated_at_millis: null }
 
   - match: { results.1.name: "test-engine-1" }
-  - match: { results.1.indices: ["test-index1"] }
-  - match: { results.1..analytics_collection_name: "test-analytics1" }
-  - gte: { results.1.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "test-engine-1" }
+  - match: { results.1.indices: [ "test-index1" ] }
+  - match: { results.1.analytics_collection_name: "test-analytics1" }
+  - match: { results.1.updated_at_millis: null }
 
 
 ---
@@ -124,15 +131,16 @@ teardown:
   - match: { count: 2 }
 
   - match: { results.0.name: "test-engine-1" }
-  - match: { results.0.indices: ["test-index1"] }
-  - match: { results.0..analytics_collection_name: "test-analytics1" }
-  - gte: { results.0.updated_at_millis: 0 }
+  - match: { results.0.engine_alias: "engine-test-engine-1" }
+  - match: { results.0.indices: [ "test-index1" ] }
+  - match: { results.0.analytics_collection_name: "test-analytics1" }
+  - match: { results.0.updated_at_millis: null }
 
   - match: { results.1.name: "test-engine-2" }
-  - match: { results.1.indices: ["test-index2"] }
-  - match: { results.1..analytics_collection_name: "test-analytics2" }
-  - gte: { results.1.updated_at_millis: 0 }
-
+  - match: { results.0.engine_alias: "engine-test-engine-2" }
+  - match: { results.1.indices: [ "test-index2" ] }
+  - match: { results.1.analytics_collection_name: "test-analytics2" }
+  - match: { results.1.updated_at_millis: null }
 ---
 "Empty query results":
   - do:
