--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -70,3 +70,24 @@ setup:
         body:
           indices: [ "test-index1", "index-does-not-exist" ]
 
+---
+"Create Engine - Engine already exists":
+  - do:
+      engine.put:
+        engine_id: test-re-creating-engine
+        create: true
+        body:
+          indices: [ "test-index1" ]
+
+  - match: { result: "created" }
+
+  - do:
+      catch: conflict
+      engine.put:
+        engine_id: test-re-creating-engine
+        create: true
+        body:
+          indices: [ "test-index1" ]
+
+  - match: { error.type: "version_conflict_engine_exception" }
+
