--- a/x-pack/plugin/esql/qa/server/single-node/build.gradle
+++ b/x-pack/plugin/esql/qa/server/single-node/build.gradle
@@ -6,6 +6,10 @@ dependencies {
   clusterModules project(':modules:mapper-extras')
   clusterModules project(xpackModule('mapper-constant-keyword'))
   clusterModules project(xpackModule('wildcard'))
+  clusterModules project(xpackModule('mapper-version'))
+  clusterModules project(xpackModule('spatial'))
+  clusterModules project(xpackModule('analytics'))
+  clusterModules project(xpackModule('mapper-aggregate-metric'))
 }
 
 restResources {
