Fix merge from upstream changes

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -47,6 +47,10 @@ teardown:
         engine_id: test-updated-engine
         ignore: 404
 
+  - do:
+      engine.delete:
+        engine_id: test-re-creating-engine
+        ignore: 404
 
 ---
 "Create Engine":
