List engines API (#94168)

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -36,6 +36,23 @@ setup:
               number_of_replicas: 0
 
 ---
+teardown:
+  - do:
+      engine.delete:
+        engine_id: test-engine
+        ignore: 404
+
+  - do:
+      engine.delete:
+        engine_id: test-updated-engine
+        ignore: 404
+
+  - do:
+      engine.delete:
+        engine_id: test-re-creating-engine
+        ignore: 404
+
+---
 "Create Engine":
   - do:
       engine.put:
