--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.sort/10_basic.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/indices.sort/10_basic.yml
@@ -8,11 +8,17 @@
           settings:
             number_of_shards: 1
             index.sort.field: rank
+            # ensure no relocation as tests rely on segments.
+            routing.rebalance.enable: "none"
           mappings:
             properties:
               rank:
                 type:     integer
-
+  - do:
+      cluster.health:
+        index: test
+        # ensure that all shards are ready before indexing/refresh as tests rely on segments.
+        wait_for_no_initializing_shards: true
   - do:
       index:
         index: test
