--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/380_sort_segments_on_timestamp.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/380_sort_segments_on_timestamp.yml
@@ -15,6 +15,9 @@
                 type: date
           settings:
             number_of_shards: 1
+            # make sure all shards are ready before indexing and no relocation as we will verify segments.
+            wait_for_no_initializing_shards: true
+            routing.rebalance.enable: "none"
 
   # 1st segment
   - do:
@@ -53,6 +56,9 @@
         body:
           settings:
             number_of_shards: 1
+            # make sure all shards are ready before indexing and no relocation as we will verify segments.
+            wait_for_no_initializing_shards: true
+            routing.rebalance.enable: "none"
 
   # 1st segment
   - do:
@@ -112,6 +118,9 @@
                 type: date
           settings:
             number_of_shards: 1
+            # make sure all shards are ready before indexing and no relocation as we will verify segments.
+            wait_for_no_initializing_shards: true
+            routing.rebalance.enable: "none"
 
   # 1st segment missing @timestamp field
   - do:
