--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/380_sort_segments_on_timestamp.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search/380_sort_segments_on_timestamp.yml
@@ -15,10 +15,13 @@
                 type: date
           settings:
             number_of_shards: 1
-            # make sure all shards are ready before indexing and no relocation as we will verify segments.
-            wait_for_no_initializing_shards: true
+            # ensure no relocation as we will verify segments.
             routing.rebalance.enable: "none"
-
+  - do:
+      cluster.health:
+        index: test_index1
+        # ensure that all shards are ready before indexing/refresh as we will verify segments.
+        wait_for_no_initializing_shards: true
   # 1st segment
   - do:
       index:
@@ -56,10 +59,13 @@
         body:
           settings:
             number_of_shards: 1
-            # make sure all shards are ready before indexing and no relocation as we will verify segments.
-            wait_for_no_initializing_shards: true
+            # make sure no relocation as we will verify segments.
             routing.rebalance.enable: "none"
-
+  - do:
+      cluster.health:
+        index: test_index2
+        # ensure that all shards are ready before indexing/refresh as we will verify segments.
+        wait_for_no_initializing_shards: true
   # 1st segment
   - do:
       index:
@@ -118,10 +124,13 @@
                 type: date
           settings:
             number_of_shards: 1
-            # make sure all shards are ready before indexing and no relocation as we will verify segments.
-            wait_for_no_initializing_shards: true
+            # make sure no relocation as we will verify segments.
             routing.rebalance.enable: "none"
-
+  - do:
+      cluster.health:
+        index: test_index3
+        # ensure that all shards are ready before indexing/refresh as we will verify segments.
+        wait_for_no_initializing_shards: true
   # 1st segment missing @timestamp field
   - do:
       index:
