Remove Engine alias when Engine is deleted (#94251)

--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/20_engine_put.yml
@@ -62,6 +62,13 @@ teardown:
 
   - match: { result: "created" }
 
+  - do:
+      indices.exists_alias:
+        name: engine-test-engine
+
+  - is_true: ''
+
+  - match: { "foo" }
 ---
 "Update Engine":
   - do:
