--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/40_engine_delete.yml
@@ -33,6 +33,12 @@ teardown:
       engine.get:
         engine_id: test-engine-to-delete
 
+  - do:
+      indices.exists_alias:
+        name: engine-test-engine-to-delete
+
+  - is_false: ''
+
 ---
 "Delete Engine - Index does not exist":
   - do:
