--- a/modules/ingest-common/src/yamlRestTest/resources/rest-api-spec/test/ingest/230_change_target_index.yml
+++ b/modules/ingest-common/src/yamlRestTest/resources/rest-api-spec/test/ingest/230_change_target_index.yml
@@ -83,8 +83,9 @@ teardown:
 - match: { _source.a: true }
 # The next is commented out because there's a bug where the final_pipeline is executed twice under certain circumstances
 # (See issue https://github.com/elastic/elasticsearch/issues/83653).
-# TODO: Uncomment after the issue is fixed
-#- match: { _source.accumulator: ["non-repeated-value"] }
+# TODO: Uncomment after the issue is fixed, and remove the repeated value test of the current behavior
+#- match: { _source.accumulator: [ "non-repeated-value" ] }
+- match: { _source.accumulator: [ "non-repeated-value", "non-repeated-value" ] }
 
 # only the foo index
 - do:
@@ -145,8 +146,9 @@ teardown:
 - match: { _source.a: true }
 # The next is commented out because there's a bug where the final_pipeline is executed twice under certain circumstances
 # (See issue https://github.com/elastic/elasticsearch/issues/83653).
-# TODO: Uncomment after the issue is fixed
+# TODO: Uncomment after the issue is fixed, and remove the repeated value test of the current behavior
 #- match: { _source.accumulator: [ "non-repeated-value" ] }
+- match: { _source.accumulator: [ "non-repeated-value", "non-repeated-value" ] }
 
 # only the foo index
 - do:
