--- a/docs/changelog/92213.yaml
+++ b/docs/changelog/92213.yaml
@@ -1,5 +1,11 @@
 pr: 92213
 summary: Make native inference generally available
 area: Machine Learning
-type: enhancement
+type: feature
 issues: []
+highlight:
+  title: Make natural language processing GA
+  body: From 8.7, NLP model management, model allocation, and support for 
+    inference against third party models are generally available. (The new 
+    `text_embedding` extension to `knn` search is still in technical preview.)
+  notable: true
