Remember previous versions in test skip.version

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/tsdb/20_mapping.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/tsdb/20_mapping.yml
@@ -539,7 +539,7 @@ source include/exclude:
 ---
 Unsupported metric type position:
   - skip:
-      version: "all"
+      version: "all, - 8.0.99, 8.8.0 -"
       reason: AwaitsFix https://github.com/elastic/elasticsearch/issues/94239, index.mode and routing_path introduced in 8.1.0 and time series metric position introduced in 8.8.0
 
   - do:
