Add trigger message

--- a/.buildkite/promote-es-serverless.yml
+++ b/.buildkite/promote-es-serverless.yml
@@ -1,6 +1,7 @@
 steps:
   - trigger: elasticsearch-serverless
     label: ":elasticsearch: Run serverless tests"
+    message: "Elasticsearch submodule promotion build"
     branches: override_submodule_commit
     build:
       env:
