--- a/.buildkite/promote-es-serverless.yml
+++ b/.buildkite/promote-es-serverless.yml
@@ -2,10 +2,10 @@ steps:
   - trigger: elasticsearch-serverless
     label: ":elasticsearch: Run serverless tests"
     branches: override_submodule_commit
-    build:
-      message: "Elasticsearch submodule promotion build"
-      env:
-        ELASTICSEARCH_SUBMODULE_COMMIT: "${BUILDKITE_COMMIT}"
+#    build:
+#      message: "Elasticsearch submodule promotion build"
+#      env:
+#        ELASTICSEARCH_SUBMODULE_COMMIT: "${BUILDKITE_COMMIT}"
 
 #  - wait:
 #
