convert template to a composable one allow warnings on template creation

--- a/modules/ingest-common/src/yamlRestTest/resources/rest-api-spec/test/ingest/230_change_target_index.yml
+++ b/modules/ingest-common/src/yamlRestTest/resources/rest-api-spec/test/ingest/230_change_target_index.yml
@@ -1,12 +1,18 @@
 ---
 setup:
+  - skip:
+      features: [ "allowed_warnings" ]
+
   - do:
-      indices.put_template:
+      allowed_warnings:
+        - "index template [add_final_pipeline] has index patterns [foo] matching patterns from existing older templates [global] with patterns (global => [*]); this template [add_final_pipeline] will take precedence during new index creation"
+      indices.put_index_template:
         name: add_final_pipeline
         body:
-          index_patterns: foo
-          settings:
-            final_pipeline: "final_pipeline"
+          index_patterns: [ "foo" ]
+          template:
+            settings:
+              final_pipeline: "final_pipeline"
 
   - do:
       ingest.put_pipeline:
