--- a/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/70_behavioral_analytics_put.yml
+++ b/x-pack/plugin/ent-search/qa/rest/src/yamlRestTest/resources/rest-api-spec/test/entsearch/70_behavioral_analytics_put.yml
@@ -1,117 +1,30 @@
-setup:
-  - do:
-      indices.create:
-        index: test-index1
-        body:
-          settings:
-            index:
-              number_of_shards: 1
-              number_of_replicas: 0
-
-  - do:
-      indices.create:
-        index: test-index2
-        body:
-          settings:
-            index:
-              number_of_shards: 1
-              number_of_replicas: 0
-
-  - do:
-      indices.create:
-        index: test-index3
-        body:
-          settings:
-            index:
-              number_of_shards: 1
-              number_of_replicas: 0
-
-  - do:
-      indices.create:
-        index: test-index4
-        body:
-          settings:
-            index:
-              number_of_shards: 1
-              number_of_replicas: 0
-
----
 teardown:
   - do:
-      search_application.delete:
-        name: test-search-application
-        ignore: 404
-
-  - do:
-      search_application.delete:
-        name: test-updated-search-application
-        ignore: 404
-
-  - do:
-      search_application.delete:
-        name: test-re-creating-search-application
+      behavioral_analytics.delete:
+        name: test-analytics-collection
         ignore: 404
 
 ---
-"Create Search Application":
+"Create Analytics Collection":
   - do:
-      search_application.put:
-        name: test-search-application
-        body:
-          indices: [ "test-index1", "test-index2" ]
+      behavioral_analytics.put:
+        name: test-analytics-collection
 
-  - match: { result: "created" }
-
-  - do:
-      indices.exists_alias:
-        name: test-search-application
-
-  - is_true: ''
-
-  - match: { "foo" }
----
-"Update Search Application":
-  - do:
-      search_application.put:
-        name: test-updated-search-application
-        body:
-          indices: [ "test-index1", "test-index2" ]
-
-  - do:
-      search_application.put:
-        name: test-updated-search-application
-        body:
-          indices: [ "test-index3", "test-index4" ]
-
-  - match: { result: "updated" }
+  - match: { acknowledged: true }
+  - match: { name: "test-analytics-collection" }
 
 ---
-"Create Search Application - Index does not exist":
+"Create Analytics Collection - analytics collection already exists":
+  - do:
+      behavioral_analytics.put:
+        name: test-analytics-collection
+
+  - match: { acknowledged: true }
+
   - do:
       catch: bad_request
-      search_application.put:
-        name: test-error-search-application
-        body:
-          indices: [ "test-index1", "index-does-not-exist" ]
+      behavioral_analytics.put:
+        name: test-analytics-collection
 
----
-"Create Search Application - Resource already exists":
-  - do:
-      search_application.put:
-        name: test-re-creating-search-application
-        create: true
-        body:
-          indices: [ "test-index1" ]
-
-  - match: { result: "created" }
-
-  - do:
-      catch: conflict
-      search_application.put:
-        name: test-re-creating-search-application
-        create: true
-        body:
-          indices: [ "test-index1" ]
-
-  - match: { error.type: "version_conflict_engine_exception" }
+  - match: { error.type: "resource_already_exists_exception" }
 
