[Test] Add SQL yaml tests to CCS common yaml test suite
This PR adds support for CCS common YAML test suite to run SQL yaml
tests with both the existing and new remote cluster models.

Relates: #94265, #93720

--- a/qa/ccs-common-rest/build.gradle
+++ b/qa/ccs-common-rest/build.gradle
@@ -11,11 +11,11 @@ apply plugin: 'elasticsearch.internal-yaml-rest-test'
 restResources {
   restApi {
     include '_common', 'bulk', 'count', 'cluster', 'field_caps', 'knn_search', 'index', 'indices', 'msearch',
-      'search', 'async_search', 'graph', '*_point_in_time', 'info', 'scroll', 'clear_scroll', 'search_mvt', 'eql'
+      'search', 'async_search', 'graph', '*_point_in_time', 'info', 'scroll', 'clear_scroll', 'search_mvt', 'eql', 'sql'
   }
   restTests {
     includeCore 'field_caps', 'msearch', 'search', 'suggest', 'scroll', "indices.resolve_index"
-    includeXpack 'async_search', 'vector-tile'
+    includeXpack 'async_search', 'vector-tile', 'sql'
   }
 }
 
@@ -28,6 +28,7 @@ dependencies {
   clusterModules project(':x-pack:plugin:vector-tile')
   clusterModules project(':modules:legacy-geo')
   clusterModules project(':x-pack:plugin:eql')
+  clusterModules project(':x-pack:plugin:sql')
 }
 
 tasks.named("yamlRestTest") {
@@ -40,6 +41,7 @@ tasks.named("yamlRestTest") {
       'search.aggregation/50_filter/Standard queries get cached',
       'search.aggregation/50_filter/Terms lookup gets cached', // terms lookup by "index" doesn't seem to work correctly
       'search.aggregation/70_adjacency_matrix/Terms lookup', // terms lookup by "index" doesn't seem to work correctly
+//      'sql/translate/*', // no need to test translate since it does not perform any actual cross cluster requests
     ].join(',')
 }
 
